Fix for smoketest blocker bug 81799 "Infinite loop in disk cache", sr=darin.